--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -37,22 +37,23 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      # Step 5: Install OPA (Open Policy Agent)
+      # Step 5: Build Docker Image
+      - name: Build Docker Image
+        run: docker build -t devsecops-demo:latest .
+
+      # Step 6: Install OPA (Open Policy Agent)
       - name: Install Open Policy Agent
         run: |
-          curl -L -o opa https://openpolicyagent.org/downloads/v0.47.5/opa_linux_amd64
+          curl -L -o opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
           chmod +x opa
           sudo mv opa /usr/local/bin/
+          opa version  # Verify the installation
 
-      # Step 6: Validate Dockerfile with OPA (Best Practices)
+      # Step 7: Validate Dockerfile with OPA (Best Practices)
       - name: Validate Dockerfile
         run: |
           opa eval --input Dockerfile --data policy/ --format pretty \
             --output policy-evaluation.txt "data.docker.policy.deny"
-
-      # Step 7: Build Docker Image
-      - name: Build Docker Image
-        run: docker build -t devsecops-demo:latest .
 
       # Step 8: Scan Docker Image with Trivy (Vulnerability Scan)
       - name: Scan Docker Image with Trivy
@@ -62,37 +63,23 @@ jobs:
       - name: Optimize Docker Image
         run: docker-slim build --tag devsecops-demo-optimized:latest devsecops-demo:latest
 
-      # Step 10: Install Cosign (for Image Signing)
-      - name: Install Cosign
-        run: |
-          curl -L -o cosign https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64
-          chmod +x cosign
-          sudo mv cosign /usr/local/bin/
-
-      # Step 11: Sign Optimized Docker Image with Cosign
+      # Step 10: Sign Optimized Docker Image with Cosign
       - name: Sign Docker Image
         env:
           COSIGN_KEY: ${{ secrets.COSIGN_KEY }}
         run: |
           echo "$COSIGN_KEY" > cosign.key
           cosign sign --key cosign.key devsecops-demo-optimized:latest
-          rm -f cosign.key  # Remove key file for security
 
-      # Step 12: Push Signed Docker Image to Container Registry
+      # Step 11: Push Signed Docker Image to Container Registry
       - name: Push Docker Image
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker tag devsecops-demo-optimized:latest ${{ secrets.DOCKER_REPO }}/devsecops-demo:latest
-          docker push ${{ secrets.DOCKER_REPO }}/devsecops-demo:latest
+        run: docker tag devsecops-demo-optimized:latest <your-docker-repo>/devsecops-demo:latest && \
+             docker push <your-docker-repo>/devsecops-demo:latest
 
-      # Step 13: Verify Signed Docker Image (Final Validation)
+      # Step 12: Verify Signed Docker Image (Final Validation)
       - name: Verify Signed Docker Image
         env:
           COSIGN_KEY: ${{ secrets.COSIGN_KEY }}
         run: |
           echo "$COSIGN_KEY" > cosign.key
-          cosign verify --key cosign.key ${{ secrets.DOCKER_REPO }}/devsecops-demo:latest
-          rm -f cosign.key  # Remove key file for security
+          cosign verify --key cosign.key <your-docker-repo>/devsecops-demo:latest
