--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -133,8 +133,10 @@ jobs:
 
       - name: Install Docker Slim
         run: |
-          curl -sSL https://github.com/docker-slim/docker-slim/releases/download/1.38.0/dist_linux.tar.gz | tar xz -C /tmp
-          sudo mv /tmp/docker-slim /usr/local/bin/
+          curl -sSL https://github.com/docker-slim/docker-slim/releases/download/1.38.0/dist_linux.tar.gz -o docker-slim.tar.gz
+          tar xzvf docker-slim.tar.gz
+          sudo mv docker-slim /usr/local/bin/
+
 
       - name: Scan Docker Image with Trivy
         run: |
