--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -133,10 +133,10 @@ jobs:
 
       - name: Install Docker Slim
         run: |
-          # Download the latest docker-slim release
           curl -sSL https://github.com/docker-slim/docker-slim/releases/download/1.38.0/dist_linux_amd64 -o docker-slim
           chmod +x docker-slim
           sudo mv docker-slim /usr/local/bin/
+          docker-slim --version  # Check version
 
       - name: Scan Docker Image with Trivy
         run: |
@@ -146,7 +146,8 @@ jobs:
             aquasec/trivy image --scanners vuln sidwar/devsecops-demo:latest
 
       - name: Optimize Docker Image
-        run: docker-slim build --tag sidwar/devsecops-demo-optimized:latest sidwar/devsecops-demo:latest
+        run: |
+          docker-slim build --tag sidwar/devsecops-demo-optimized:latest sidwar/devsecops-demo:latest
 
       - name: Sign Docker Image
         env:
