--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -89,6 +89,10 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - '**'
+  workflow_dispatch:
 
 jobs:
   devsecops-demo:
@@ -145,10 +149,124 @@ jobs:
             -v $(pwd)/trivy-cache:/root/.cache/ \
             aquasec/trivy image --scanners vuln sidwar/devsecops-demo:latest
 
-      - name: Optimize Docker Image
+  optimize_image:
+    name: Optimize Docker Image
+    runs-on: ubuntu-latest
+    needs: devsecops-demo
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Debug
+        run: docker images
+
+      - name: Optimize Docker image
         run: |
-          docker pull sidwar/devsecops-demo:latest
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock dslim/docker-slim build --http-probe=false sidwar/devsecops-demo:latest
+          docker pull sidwar/devsecops-demo:${{ github.sha }}
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock dslim/docker-slim build --http-probe=false sidwar/devsecops-demo:${{ github.sha }}
+
+      - name: Log in to DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Tag and Push Docker image
+        run: |
+          docker tag sidwar/devsecops-demo.slim:latest sidwar/devsecops-demo:slim-${{ github.sha }}
+          docker push sidwar/devsecops-demo:slim-${{ github.sha }}
+
+  sign_image:
+    name: Sign Docker Image
+    runs-on: ubuntu-latest
+    needs: optimize_image
+
+    steps:
+      - name: Sign Docker Image
+        env:
+          COSIGN_KEY: ${{ secrets.COSIGN_KEY }}
+        run: |
+          echo "$COSIGN_KEY" > cosign.key
+          cosign sign --key cosign.key sidwar/devsecops-demo-optimized:latest
+
+  push_to_registry:
+    name: Push Docker Image to Registry
+    runs-on: ubuntu-latest
+    needs: sign_image
+    steps:
+      - name: Push Docker Image
+        run: |
+          docker tag sidwar/devsecops-demo-optimized:latest sidwar/devsecops-demo:latest
+          docker push sidwar/devsecops-demo:latest
+
+  verify_signed_image:
+    name: Verify Signed Docker Image
+    runs-on: ubuntu-latest
+    needs: push_to_registry
+    steps:name: DevSecOps Pipeline
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  devsecops-demo:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.8
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Start Docker Service
+        run: sudo service docker start
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker Image
+        run: docker build -t sidwar/devsecops-demo:latest .
+
+      - name: Install OPA
+        run: |
+          curl -L -o opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
+          chmod +x opa
+          sudo mv opa /usr/local/bin/
+
+      - name: Validate Dockerfile with OPA
+        run: |
+          opa eval --input Dockerfile --data policy/ --format pretty \
+            "data.docker.policy.deny" > policy-evaluation.txt
+
+      # - name: Install Docker Slim
+      #   run: |
+      #     curl -sSL https://github.com/docker-slim/docker-slim/releases/download/1.38.0/dist_linux_amd64 -o docker-slim
+      #     chmod +x docker-slim
+      #     sudo mv docker-slim /usr/local/bin/
+      #     docker-slim --version  # Check version
+
+      - name: Scan Docker Image with Trivy
+        run: |
+          docker run --rm \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v $(pwd)/trivy-cache:/root/.cache/ \
+            aquasec/trivy image --scanners vuln sidwar/devsecops-demo:latest
+
+      # - name: Optimize Docker Image
+      #   run: |
+      #     docker pull sidwar/devsecops-demo:latest
+      #     docker run --rm -v /var/run/docker.sock:/var/run/docker.sock dslim/docker-slim build --http-probe=false sidwar/devsecops-demo:latest
 
       - name: Log in to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -174,3 +292,10 @@ jobs:
         run: |
           echo "$COSIGN_KEY" > cosign.key
           cosign verify --key cosign.key sidwar/devsecops-demo:slim-${{ github.sha }}
+
+      - name: Verify Signed Docker Image
+        env:
+          COSIGN_KEY: ${{ secrets.COSIGN_KEY }}
+        run: |
+          echo "$COSIGN_KEY" > cosign.key
+          cosign verify --key cosign.key sidwar/devsecops-demo:latest
