--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -156,6 +156,14 @@ jobs:
           chmod +x opa
           sudo mv opa /usr/local/bin/
 
+  validate_dockerfile:
+    runs-on: ubuntu-latest
+    needs: install_opa
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
       - name: Validate Dockerfile with OPA (Best Practices)
         run: |
           opa eval --input Dockerfile --data policy/ --format pretty \
