updated workflow file

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -145,30 +145,18 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  install_opa:
-    runs-on: ubuntu-latest
-    needs: sonar_scan
-
-    steps:
+      # Step 6: Install OPA
       - name: Install OPA
         run: |
           curl -L -o opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
           chmod +x opa
           sudo mv opa /usr/local/bin/
 
-  validate_dockerfile:
-    runs-on: ubuntu-latest
-    needs: install_opa
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Validate Dockerfile with OPA (Best Practices)
+      # Step 7: Validate Dockerfile with OPA (Best Practices)
+      - name: Validate Dockerfile
         run: |
           opa eval --input Dockerfile --data policy/ --format pretty \
             "data.docker.policy.deny" > policy-evaluation.txt
-          cat policy-evaluation.txt
 
   vulnerability_scan:
     runs-on: ubuntu-latest
