--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -144,7 +144,9 @@ jobs:
             -Dsonar.host.url=https://sonarcloud.io
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
+  validate_dockerfile:
+    runs-on: ubuntu-latest
+    needs: sonar_scan
       # Step 6: Install OPA
       - name: Install OPA
         run: |
