--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -150,6 +150,13 @@ jobs:
     needs: sonar_scan
 
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: List files in the repository
+        run: |
+          echo "Listing files in the repository:"
+          ls -al
       - name: Install OPA
         run: |
           curl -L -o opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
