--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -118,6 +118,12 @@ jobs:
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io
           docker --version
 
+      - name: Install Docker Compose (latest version)
+        run: |
+          sudo curl -L https://github.com/docker/compose/releases/download/v2.19.0/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+          
       - name: Start Docker Service
         run: sudo service docker start
 
