--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -118,12 +118,16 @@ jobs:
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io
           docker --version
 
+      - name: Set Docker API Version
+        run: export DOCKER_API_VERSION='1.25'
+
+
       - name: Install Docker Compose (latest version)
         run: |
           sudo curl -L https://github.com/docker/compose/releases/download/v2.19.0/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
-          
+
       - name: Start Docker Service
         run: sudo service docker start
 
@@ -207,6 +211,10 @@ jobs:
 
       - name: Debug
         run: docker images
+        
+      - name: Set Docker API Version
+        run: export DOCKER_API_VERSION='1.25'
+
 
       - name: Optimize Docker image
         run: |
