--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -118,18 +118,16 @@ jobs:
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io
           docker --version
 
-      - name: Set Docker API Version
-        run: export DOCKER_API_VERSION='1.25'
-
-
-      - name: Install Docker Compose (latest version)
-        run: |
-          sudo curl -L https://github.com/docker/compose/releases/download/v2.19.0/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
-
+          
       - name: Start Docker Service
         run: sudo service docker start
+
+      - name: Set Docker API Version
+        env:
+          DOCKER_API_VERSION: "1.44"
+        run: |
+          echo "Setting Docker API version to 1.44"
+          docker version
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -138,9 +136,13 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
+        env:
+          DOCKER_API_VERSION: "1.44"
         run: docker build -t sidwar/devsecops-demo:${{ github.sha }} .
 
       - name: Push Docker Image to Docker Hub
+        env:
+          DOCKER_API_VERSION: "1.44"
         run: docker push sidwar/devsecops-demo:${{ github.sha }}
 
   sonar_scan:
@@ -211,15 +213,6 @@ jobs:
 
       - name: Debug
         run: docker images
-        
-      - name: Install Docker (latest version)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-          docker --version
-        
-      - name: Set Docker API Version
-        run: export DOCKER_API_VERSION='1.25'
 
 
       - name: Optimize Docker image
