updated workflow file

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -214,6 +214,9 @@ jobs:
       - name: Debug
         run: docker images
 
+      - name: Install Docker (latest version)
+        run: |
+          docker --version
 
       - name: Optimize Docker image
         run: |
