--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -118,16 +118,8 @@ jobs:
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io
           docker --version
 
-          
       - name: Start Docker Service
         run: sudo service docker start
-
-      - name: Set Docker API Version
-        env:
-          DOCKER_API_VERSION: "1.44"
-        run: |
-          echo "Setting Docker API version to 1.44"
-          docker version
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -136,13 +128,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
-        env:
-          DOCKER_API_VERSION: "1.44"
         run: docker build -t sidwar/devsecops-demo:${{ github.sha }} .
 
       - name: Push Docker Image to Docker Hub
-        env:
-          DOCKER_API_VERSION: "1.44"
         run: docker push sidwar/devsecops-demo:${{ github.sha }}
 
   sonar_scan:
@@ -171,10 +159,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: List files in the repository
-        run: |
-          echo "Listing files in the repository:"
-          ls -al
       - name: Install OPA
         run: |
           curl -L -o opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
@@ -208,28 +192,26 @@ jobs:
     needs: vulnerability_scan
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Debug
-        run: docker images
+      - name: Pull Docker Image
+        run: docker pull sidwar/devsecops-demo:${{ github.sha }}
 
-      - name: Install Docker (latest version)
-        run: |
-          docker --version
+      - name: Optimize Docker Image with Docker Slim
+        uses: docker-slim/docker-slim-action@v5
+        with:
+          target: sidwar/devsecops-demo:${{ github.sha }}
+          tag: sidwar/devsecops-demo:slim-${{ github.sha }}
 
-      - name: Optimize Docker image
-        run: |
-          docker pull sidwar/devsecops-demo:${{ github.sha }}
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock dslim/docker-slim build --http-probe=false sidwar/devsecops-demo:${{ github.sha }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Log in to DockerHub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Tag and Push Optimized Docker image
-        run: |
-          docker tag sidwar/devsecops-demo.slim:latest sidwar/devsecops-demo:slim-${{ github.sha }}
-          docker push sidwar/devsecops-demo:slim-${{ github.sha }}
+      - name: Push Slimmed Docker Image
+        run: docker push sidwar/devsecops-demo:slim-${{ github.sha }}
 
   sign_image:
     name: Sign Docker Image
@@ -242,19 +224,10 @@ jobs:
           echo "$COSIGN_KEY" > cosign.key
           cosign sign --key cosign.key sidwar/devsecops-demo:slim-${{ github.sha }}
 
-  push_image:
-    name: Push Docker Image
-    runs-on: ubuntu-latest
-    needs: sign_image
-
-    steps:
-      - name: Push Signed Docker Image
-        run: docker push sidwar/devsecops-demo:slim-${{ github.sha }}
-
   verify_image:
     name: Verify Docker Image
     runs-on: ubuntu-latest
-    needs: push_image
+    needs: sign_image
 
     steps:
       - name: Verify Signed Docker Image
