--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -148,9 +148,11 @@ jobs:
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov-report/index.xml  # Coverage report
+            -Dsonar.sources=src
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          
+
   validate_dockerfile:
     runs-on: ubuntu-latest
     needs: sonar_scan
@@ -179,12 +181,21 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Scan Docker Image with Trivy
+      - name: Scan Docker Image with Trivy and Save Report
         run: |
           docker run --rm \
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v $(pwd)/trivy-cache:/root/.cache/ \
-            aquasec/trivy image --scanners vuln sidwar/devsecops-demo:${{ github.sha }}
+            aquasec/trivy image --scanners vuln \
+            --format json \
+            --output trivy-report.json \
+            sidwar/devsecops-demo:${{ github.sha }}
+
+      - name: Upload Trivy Vulnerability Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: trivy-vulnerability-report
+          path: trivy-report.json
 
   optimize_image:
     name: Optimize Docker Image
@@ -198,11 +209,11 @@ jobs:
       - name: Pull Docker Image
         run: docker pull sidwar/devsecops-demo:${{ github.sha }}
 
-      - name: Slim the Docker Image
-        uses: kitabisa/docker-slim-action@v1
+      - name: Optimize Docker Image with Docker Slim
+        uses: docker-slim/docker-slim-action@v5
         with:
           target: sidwar/devsecops-demo:${{ github.sha }}
-          tag: slim
+          tag: sidwar/devsecops-demo:slim-${{ github.sha }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -211,7 +222,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Slimmed Docker Image
-        run: docker push sidwar/devsecops-demo:slim
+        run: docker push sidwar/devsecops-demo:slim-${{ github.sha }}
 
   sign_image:
     name: Sign Docker Image
@@ -222,7 +233,7 @@ jobs:
       - name: Log in to Cosign
         run: |
           echo "$COSIGN_KEY" > cosign.key
-          cosign sign --key cosign.key sidwar/devsecops-demo:slim
+          cosign sign --key cosign.key sidwar/devsecops-demo:slim-${{ github.sha }}
 
   verify_image:
     name: Verify Docker Image
@@ -233,4 +244,4 @@ jobs:
       - name: Verify Signed Docker Image
         run: |
           echo "$COSIGN_KEY" > cosign.key
-          cosign verify --key cosign.key sidwar/devsecops-demo:slim
+          cosign verify --key cosign.key sidwar/devsecops-demo:slim-${{ github.sha }}
