updated workflow file

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -149,9 +149,10 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov-report/index.xml
-            -Dsonar.sources=src
+            -Dsonar.sources=app  # Change this to your actual source folder
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
 
 
   validate_dockerfile:
