--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -133,15 +133,14 @@ jobs:
       - name: Push Docker Image to Docker Hub
         run: docker push sidwar/devsecops-demo:${{ github.sha }}
 
-  sonar_scan:
-    runs-on: ubuntu-latest
-    needs: devsecops-demo
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up SonarQube Scanner
+      - name: List directory contents
+        run: ls -la
+
+      - name: Run SonarCloud analysis
         uses: sonarsource/sonarcloud-github-action@v2
         with:
           args: >
@@ -151,9 +150,9 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov-report/index.xml
             -Dsonar.sources=app
             -X  # Add this for debug logs
-
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
 
 
 
