--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -112,6 +112,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Run Tests with Coverage
+        run: |
+          pip install pytest pytest-cov
+          pytest --cov=app --cov-report=xml:coverage.xml  # Adjust your module path
+
       - name: Install Docker (latest version)
         run: |
           sudo apt-get update
@@ -151,13 +156,11 @@ jobs:
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov-report/index.xml
+            -Dsonar.python.coverage.reportPaths=coverage.xml  # Point to coverage.xml file
             -Dsonar.sources=app
             -X
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-
 
   validate_dockerfile:
     runs-on: ubuntu-latest
