--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -115,8 +115,8 @@ jobs:
       - name: Run Tests with Coverage
         run: |
           pip install pytest pytest-cov
-          pytest --cov=app --cov-report=xml:coverage.xml
-          
+          pytest --cov=app --cov-report=xml:coverage.xml --maxfail=1 -v
+
       - name: Install Docker (latest version)
         run: |
           sudo apt-get update
