--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -228,6 +228,7 @@ jobs:
         with:
           target: sidwar/devsecops-demo:${{ github.sha }}
           tag: sidwar/devsecops-demo:slim-${{ github.sha }}
+        continue-on-error: true 
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
