--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -228,7 +228,7 @@ jobs:
         with:
           target: sidwar/devsecops-demo:${{ github.sha }}
           tag: sidwar/devsecops-demo:slim-${{ github.sha }}
-        continue-on-error: true  # Continue even if this step fails
+        continue-on-error: true 
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -249,7 +249,7 @@ jobs:
         run: |
           echo "$COSIGN_KEY" > cosign.key
           cosign sign --key cosign.key sidwar/devsecops-demo:${{ github.sha }}
-        continue-on-error: true  # Continue even if this step fails
+        continue-on-error: true 
 
   verify_image:
     name: Verify Docker Image
@@ -261,4 +261,4 @@ jobs:
         run: |
           echo "$COSIGN_KEY" > cosign.key
           cosign verify --key cosign.key sidwar/devsecops-demo:${{ github.sha }}
-        continue-on-error: true  # Continue even if this step fails
+        continue-on-error: true
