updated workflow file

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -121,6 +121,9 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)/app
           pytest app/test.py --cov=app --cov-report=xml:coverage.xml --maxfail=1 -v
+          ls -la
+          cat coverage.xml
+
 
       - name: Install Docker (latest version)
         run: |
