--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -116,6 +116,26 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)/app
           pytest app/test.py --cov=app --cov-report=xml:coverage.xml --maxfail=1 -v
+      - name: Install Docker (latest version)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+          docker --version
+
+      - name: Start Docker Service
+        run: sudo service docker start
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker Image
+        run: docker build -t sidwar/devsecops-demo:${{ github.sha }} .
+
+      - name: Push Docker Image to Docker Hub
+        run: docker push sidwar/devsecops-demo:${{ github.sha }}
 
   validate_dockerfile:
     runs-on: ubuntu-latest
