--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -137,6 +137,30 @@ jobs:
       - name: Push Docker Image to Docker Hub
         run: docker push sidwar/devsecops-demo:${{ github.sha }}
 
+  sonar_scan:
+    runs-on: ubuntu-latest
+    needs: devsecops-demo
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: List directory contents
+        run: ls -la
+
+      - name: Run SonarCloud analysis
+        uses: sonarsource/sonarcloud-github-action@v2
+        with:
+          args: >
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.python.coverage.reportPaths=coverage.xml 
+            -Dsonar.sources=app
+            -X
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   validate_dockerfile:
     runs-on: ubuntu-latest
     needs: devsecops-demo
@@ -205,6 +229,7 @@ jobs:
   optimize_image:
     runs-on: ubuntu-latest
     needs: vulnerability_scan
+    continue-on-error: true
 
     steps:
       - name: Pull Docker Image
@@ -240,7 +265,7 @@ jobs:
       - name: Sign Docker Image
         run: |
           echo "${{ secrets.COSIGN_KEY }}" > cosign.key
-          cosign sign --key cosign.key sidwar/devsecops-demo:slim-${{ github.sha }}
+          cosign sign --key cosign.key sidwar/devsecops-demo:${{ github.sha }}
 
   verify_image:
     runs-on: ubuntu-latest
@@ -250,4 +275,4 @@ jobs:
       - name: Verify Signed Docker Image
         run: |
           echo "${{ secrets.COSIGN_KEY }}" > cosign.key
-          cosign verify --key cosign.key sidwar/devsecops-demo:slim-${{ github.sha }}
+          cosign verify --key cosign.key sidwar/devsecops-demo:${{ github.sha }}
