updated workflow file

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -265,7 +265,8 @@ jobs:
       - name: Sign Docker Image
         run: |
           echo "${{ secrets.COSIGN_KEY }}" > cosign.key
-          cosign sign --key cosign.key sidwar/devsecops-demo:${{ github.sha }}
+          cosign sign --key cosign.key --yes sidwar/devsecops-demo:${{ github.sha }}
+
 
   verify_image:
     runs-on: ubuntu-latest
