--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -262,11 +262,26 @@ jobs:
           chmod +x cosign
           sudo mv cosign /usr/local/bin/
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract Image Digest
+        run: |
+          DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' sidwar/devsecops-demo:${{ github.sha }})
+          echo "IMAGE_DIGEST=$DIGEST" >> $GITHUB_ENV
+
       - name: Sign Docker Image
         run: |
           echo "${{ secrets.COSIGN_KEY }}" > cosign.key
-          cosign sign --key cosign.key --yes sidwar/devsecops-demo:${{ github.sha }}
+          cosign sign --key cosign.key --yes $IMAGE_DIGEST
+        env:
+          IMAGE_DIGEST: ${{ env.IMAGE_DIGEST }}
 
+      - name: Cleanup
+        run: rm -f cosign.key
 
   verify_image:
     runs-on: ubuntu-latest
